--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/AndressaRodriguess/video-maker#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "node-fetch": "^3.3.0",
+    "openai": "^3.2.1",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.19"
   }
