--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AndressaRodriguess/video-maker#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "googleapis": "^113.0.0",
     "node-fetch": "^3.3.0",
     "openai": "^3.2.1",
     "readline-sync": "^1.4.10",
