--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "googleapis": "^113.0.0",
+    "image-downloader": "^4.3.0",
     "node-fetch": "^3.3.0",
     "openai": "^3.2.1",
     "readline-sync": "^1.4.10",
